--- a/xmrig/config.json
+++ b/xmrig/config.json
@@ -64,8 +64,8 @@
         {
             "algo": null,
             "coin": null,
-            "url": "gulf.moneroocean.stream:10064 ",
-            "user": "MONERO-ADDRESS-HERE",
+            "url": "gulf.moneroocean.stream:10128",
+            "user": "YOUR MONERO ADDRESS HERE",
             "pass": "hidden",
             "rig-id": null,
             "nicehash": false,
